@@ -505,8 +505,9 @@ output_base_name ()
   esac
 }
 
-# move_to_dest FILE
-# -----------------
+
+# move_to_dest FILE...
+# --------------------
 # Move the FILE to the place where the user expects it.  FILE can be
 # the principal output (in which case -o directly apply), or an auxiliary
 # file with the same base name.
@@ -514,18 +515,21 @@ move_to_dest ()
 {
   local dest
 
-  case $tidy:$oname in
-    true:)  dest=$orig_pwd;;
-    false:) dest=;;
-    *:*)    dest=$(output_base_name "$1");;
-  esac
-  if test ! -f "$1"; then
-    error 1 "no such file or directory: $1"
-  fi
-  if test -n "$dest"; then
-    verbose "Copying $1 to $dest"
-    cp -p "$1" "$dest"
-  fi
+  for file
+  do
+    case $tidy:$oname in
+      true:)  dest=$orig_pwd;;
+      false:) dest=;;
+      *:*)    dest=$(output_base_name "$file");;
+    esac
+    if test ! -f "$file"; then
+      error 1 "no such file or directory: $file"
+    fi
+    if test -n "$dest"; then
+      verbose "Copying $file to $dest"
+      cp -p "$file" "$dest"
+    fi
+  done
 }
 
 
@@ -1178,7 +1182,11 @@ run_hevea ()
 
   verbose "running $run_hevea"
   if eval "$run_hevea" >&5; then
-    move_to_dest "$out_base"
+    case $1 in
+    html|text) move_to_dest "$out_base";;
+    info) # There can be foo.info-1, foo.info-2 etc.
+               move_to_dest "$out_base"*;;
+    esac
   else
     error 1 "$hevea exited with bad status, quitting."
   fi
